styles/card.css
 .card {
  background-color: white;
  border: 1px dotted rgb(151, 39, 13);
  padding: 1rem;
  display: flex;
  flex-flow: column nowrap;
  row-gap: 1.5rem;
}
 .card > img {
  width: 100%;
  height: 29rem;
}

.card .info {
  display: flex;
  justify-content: space-between;
  font-size: 2.4rem;
}
.card .info h3 {
  font-size: 3rem;
}
.card .actions {
  display: flex;
  justify-content: space-around;
}
.card button {
  width: 40%;
  display: flex;
  align-items: center;
  gap: 0.5rem;
  font-size: 2rem;
  font-weight: 600;
}

.card button img {
  width: 40%;
}

@media only screen and (min-width:760px) {
  .card {width: 47%;}
  .card button {gap: 1rem;}
}
@media only screen and (min-width:1300px) {
  .card {width: 30%;}
  .card button {gap: 1.5rem;}
}

